# django-todos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_todo_status.py  0003_todo_notes.py  0003_todo_user.py
todo/: settings.py  urls.py
