[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.3"
psycopg2 = "^2.9.7"
django-cors-headers = "^4.2.0"
djangorestframework-simplejwt = "^5.3.0"
django-rest-knox = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
